Added k8s pod.yaml and updated documentation